# postgres-dynamic

./: .gitignore  LICENSE  README.md  pyproject.toml
src/postgres_dynamic/: __init__.py  pgd_connection.py  pgd_get.py  pgd_transaction.py
