[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-dynamic"
version = "0.0.11"
authors = [
  { name="Bayu Satria Gemilang", email="bayu.code.lab@gmail.com" },
]
description = "Postgres Dynamic Query"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bayu-code-lab/postgres-dynamic"
"Bug Tracker" = "https://github.com/bayu-code-lab/postgres-dynamic/issues"